# Software-Rendered

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
src/gamelogic/: common_structs.rs  core.rs  macros.rs  mod.rs
src/softrender/: data_structs.rs  gamestate.rs  geometry.rs  instance.rs  instancing.rs  mod.rs  renderer.rs  texture_manager.rs  winit_app.rs
