[package]
name = "softrendered"
version = "0.1.0"
edition = "2024"

[dependencies]
softbuffer = "0.4.8"
winit = { version = "0.30.12", default-features = false, features = [
  "x11",
  "rwh_06",
] }

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
# debug = true       # Include debug symbols in the release binary
lto = "thin"       # Link Time Optimization (helps inline across modules)
